<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wakeup_sleep_goal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wakeup_sleep_goal_title_TV"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toEndOf="@+id/wakeup_sleep_goal_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:id="@+id/sleep_cardView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wakeup_sleep_goal_title"
        app:layout_constraintVertical_bias="0.097" />

    <androidx.cardview.widget.CardView
        android:id="@+id/wakeup_cardView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_cardView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/total_sleep_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_sleep_hours_TV"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wakeup_cardView"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/hours_display"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/hours_display_TV"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toEndOf="@+id/total_sleep_hour"
        app:layout_constraintTop_toBottomOf="@+id/wakeup_cardView"
        app:layout_constraintVertical_bias="0.309" />


</androidx.constraintlayout.widget.ConstraintLayout>