<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wakeup_sleep_goal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wakeup_sleep_goal_title_TV"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/wakeup_sleep_goal_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/total_sleep_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_sleep_hours_TV"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_cardView"
        app:layout_constraintVertical_bias="0.265" />


    <TextView
        android:id="@+id/hours_display"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/hours_display_TV"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toEndOf="@+id/total_sleep_hour"
        app:layout_constraintTop_toBottomOf="@+id/alarm_cardView"
        app:layout_constraintVertical_bias="0.265" />

    <GridLayout
        android:id="@+id/alarm_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:gravity="center"
        android:rowCount="2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/wakeup_sleep_goal_title"
        app:layout_constraintVertical_bias="0.099">

        <androidx.cardview.widget.CardView
            android:id="@+id/sleep_cardView"
            android:layout_width="350dp"
            android:layout_height="190dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wakeup_sleep_goal_title"
            app:layout_constraintVertical_bias="0.072"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/sleep_alarm_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/sleep_alarm_text"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold">


            </TextView>

            <TextView
                android:id="@+id/sleep_alarmTime_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="110dp"
                android:text="23:00"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/moon"


                >

            </ImageView>

            <ImageView
                android:id="@+id/setting_dot"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/dot" />

            <TextView
                android:id="@+id/alarm_on_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="95dp"
                android:text="@string/alarm_on_TV"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/alarm_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="130dp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/wakeup_cardView"
            android:layout_width="350dp"
            android:layout_height="190dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sleep_cardView"
            app:layout_constraintVertical_bias="0.032"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/wakeup_alarm_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/wakeup_alarm_text"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold">


            </TextView>

            <TextView
                android:id="@+id/wakeup_alarmTime_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="110dp"
                android:text="07:00"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/sun">

            </ImageView>

            <ImageView
                android:id="@+id/wakeup_setting_dot"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/dot" />

            <TextView
                android:id="@+id/wakeup_alarm_on_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="95dp"
                android:text="@string/alarm_on_TV"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/wakeup_alarm_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="130dp" />


        </androidx.cardview.widget.CardView>
    </GridLayout>

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/imageButton_home"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_home_24" />

        <ImageButton
            android:id="@+id/imageButton_exercise"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_exercise_24" />

        <ImageButton
            android:id="@+id/imageButton_sleep"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_alarm_24" />

        <ImageButton
            android:id="@+id/imageButton_leaderboard"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_leaderboard_24" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>