<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appBarLayout">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Change Settings"
                android:paddingStart="70dp"
                android:background="@color/blue"
                app:titleTextColor="@color/white"
                android:theme="@style/AppTheme.AppBarOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageButton
            android:id="@+id/imageButton_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/blue"
            android:contentDescription="cancel and leave"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/change_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:contentDescription="save settings"
            app:srcCompat="@drawable/ic_baseline_save_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/blue"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/alarm_time_change_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:columnCount="1"
                android:rowCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/sleep_time_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/sleep_alarm_change_TV"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:text="@string/sleep_time_TV"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp">


                        <!--                <TimePicker-->
                        <!--                    android:layout_width="wrap_content"-->
                        <!--                    android:layout_height="wrap_content"-->
                        <!--                    android:timePickerMode="spinner"-->
                        <!--                    android:id="@+id/sleep_timePicker"/>-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sleep_alarm_change_time_TV"
                            android:text="22:30"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:textSize="50sp"/>

                    </LinearLayout>


                    <!--            <Switch-->
                    <!--                android:id="@+id/sleep_alarm_on_off"-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="ON"-->
                    <!--                android:layout_marginTop="60dp"-->
                    <!--                android:layout_marginLeft="270dp"/>-->


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/wakeup_time_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/wakeup_alarm_change_TV"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:text="@string/wakeup_time_TV"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <!--                <TimePicker-->
                        <!--                    android:layout_width="wrap_content"-->
                        <!--                    android:layout_height="wrap_content"-->
                        <!--                    android:timePickerMode="spinner"-->
                        <!--                    android:id="@+id/wakeup_timePicker"/>-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/wakeup_alarm_change_time_TV"
                            android:text="08:30"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:textSize="50sp"/>
                    </LinearLayout>

                    <!--            <Switch-->
                    <!--                android:id="@+id/wakeup_alarm_on_off"-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="ON"-->
                    <!--                android:layout_marginTop="60dp"-->
                    <!--                android:layout_marginLeft="270dp"/>-->

                </androidx.cardview.widget.CardView>


            </GridLayout>

            <View
                android:id="@+id/separate_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="20dp"
                android:background="@color/deep_blue"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alarm_time_change_layout" />

            <androidx.cardview.widget.CardView
                android:id="@+id/sensor_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/separate_line"
                app:layout_constraintVertical_bias="0.024">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sleep_reminder_title_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/sleep_reminder_title"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp">

                        <TextView
                            android:id="@+id/sleep_sensor_allow_use"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/allow_sensor_use_TV"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/sleep_reminder_allow_sensor_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="ON" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <!--    <View-->
            <!--        android:id="@+id/separate_line_second"-->
            <!--        android:layout_width="350dp"-->
            <!--        android:layout_height="1dp"-->
            <!--        android:background="@android:color/darker_gray"-->
            <!--        android:textAlignment="center"-->
            <!--        tools:ignore="MissingConstraints"-->
            <!--        tools:layout_editor_absoluteX="30dp"-->
            <!--        tools:layout_editor_absoluteY="381dp" />-->


            <androidx.cardview.widget.CardView
                android:id="@+id/wakeup_alarm_setting_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sensor_cardView"
                app:layout_constraintVertical_bias="0.113">

                <TextView
                    android:id="@+id/wakeup_alarm_setting_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:text="WAKEUP ALARM SETTINGS"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alarm_type_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:text="ALARM TYPE"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/to_stop_alarm_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="60dp"
                    android:text="TO STOP ALARM"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/snooze_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="90dp"
                    android:text="SNOOZE"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/allow_sensor_use_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="120dp"
                    android:text="ALLOW SENSOR USE"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/notes_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="150dp"
                    android:text="**Enable sensor use so we could find out when you get up or fall asleep"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <Spinner
                    android:id="@+id/alarm_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="30dp"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/to_stop_alarm_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="60dp"
                    android:spinnerMode="dropdown" />

                <Switch
                    android:id="@+id/snooze_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="270dp"
                    android:layout_marginTop="90dp"
                    android:text="ON" />

                <Switch
                    android:id="@+id/sensor_use_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="270dp"
                    android:layout_marginTop="120dp"
                    android:text="ON" />

            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>



    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/sky_blue_00"
            app:menu="@menu/bottom_navigation_menu"
            app:labelVisibilityMode="labeled"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>